--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<nav>
+  <a href="home">B
+    <nav>
+      <a href="home">beranda</a>
+       <a href="history">sejarah</a>
+      <a href="contact">kontak</a>
+    </nav>
+
+
 <h1> belajar </h2> 
 <p> pada suatu hari aku sedang belajar informatika bersama pa adli dan teman teman</p>
 <b> aku langsung lumayan ngerti tentang tik</b>
